--- a/config/app.yaml
+++ b/config/app.yaml
@@ -13,12 +13,29 @@ features:
 ingress:
   rules:
   - component:
+      name: s-e
+    match:
+      path:
+        prefix: /s-e
+  - component:
       name: s-e-static
     match:
       path:
         prefix: /
-name: seahorse-app
+name: monkfish-app
 region: nyc
+services:
+- environment_slug: python
+  github:
+    branch: main
+    deploy_on_push: true
+    repo: RyanRonish/S-E
+  http_port: 8080
+  instance_count: 2
+  instance_size_slug: apps-s-1vcpu-1gb
+  name: s-e
+  run_command: gunicorn --worker-tmp-dir /dev/shm
+  source_dir: /
 static_sites:
 - environment_slug: html
   github:
